--- a/src/components/MoviesList.module.scss
+++ b/src/components/MoviesList.module.scss
@@ -1,3 +1,153 @@
+@mixin theme {
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(167, 38, 38, 1) 0%,
+    rgba(0, 188, 212, 0) 30%,
+    rgba(0, 188, 212, 0) 70%,
+    rgba(167, 38, 38, 1) 100%
+  );
+
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(167, 38, 38, 1) 0%,
+    rgba(0, 188, 212, 0) 30%,
+    rgba(0, 188, 212, 0) 70%,
+    rgba(167, 38, 38, 1) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    90deg,
+    rgba(167, 38, 38, 1) 0%,
+    rgba(0, 188, 212, 0) 30%,
+    rgba(0, 188, 212, 0) 70%,
+    rgba(167, 38, 38, 1) 100%
+  );
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#A72626', endColorstr='#A72626', GradientType=0 );
+
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    90deg,
+    rgba(167, 38, 38, 1) 0%,
+    rgba(0, 188, 212, 0) 30%,
+    rgba(0, 188, 212, 0) 70%,
+    rgba(167, 38, 38, 1) 100%
+  );
+
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    90deg,
+    rgba(167, 38, 38, 1) 0%,
+    rgba(0, 188, 212, 0) 30%,
+    rgba(0, 188, 212, 0) 70%,
+    rgba(167, 38, 38, 1) 100%
+  );
+}
+
+@mixin movieInfo {
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(234, 226, 183, 1) 50%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(234, 226, 183, 1) 50%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(234, 226, 183, 1) 50%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CDDC39', endColorstr='#CDDC39', GradientType=0 );
+
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(234, 226, 183, 1) 50%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(234, 226, 183, 1) 50%,
+    rgba(205, 220, 57, 0) 100%
+  );
+}
+
+@mixin starRating {
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(252, 191, 73, 1) 25%,
+    rgba(252, 191, 73, 1) 50%,
+    rgba(252, 191, 73, 1) 75%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(252, 191, 73, 1) 25%,
+    rgba(252, 191, 73, 1) 50%,
+    rgba(252, 191, 73, 1) 75%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(252, 191, 73, 1) 25%,
+    rgba(252, 191, 73, 1) 50%,
+    rgba(252, 191, 73, 1) 75%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CDDC39', endColorstr='#CDDC39', GradientType=0 );
+
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(252, 191, 73, 1) 25%,
+    rgba(252, 191, 73, 1) 50%,
+    rgba(252, 191, 73, 1) 75%,
+    rgba(205, 220, 57, 0) 100%
+  );
+
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    90deg,
+    rgba(205, 220, 57, 0) 0%,
+    rgba(252, 191, 73, 1) 25%,
+    rgba(252, 191, 73, 1) 50%,
+    rgba(252, 191, 73, 1) 75%,
+    rgba(205, 220, 57, 0) 100%
+  );
+}
+
 .movie {
   user-select: none;
   display: flex;
@@ -6,34 +156,136 @@
   align-items: center;
   color: white;
   position: relative;
+  border-radius: 5px;
+  height: max-content;
+  -webkit-animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1)
+    forwards;
+  animation: scale-up-center 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) forwards;
+  overflow: hidden;
+  background-color: #003049;
+  transition: 0.2s;
+}
+
+.movie:hover {
+  box-shadow: 10px 10px #eae2b7;
 }
 
 .text {
   text-align: center;
-  padding-top: 0.2rem;
-  padding-bottom: 0.2rem;
 }
 
-.poster {
+.movieBody {
+  height: 300px;
+  width: inherit;
+  position: relative;
   overflow: hidden;
 }
 
+.poster {
+  height: inherit;
+  width: auto;
+}
+
+.movieHeader {
+  display: flex;
+  height: 2rem;
+  width: inherit;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.movieFooter {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  width: inherit;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.voteAverage__text {
+  font-size: 20px;
+}
+
+.starRating,
+.movieDetails,
 .favorite {
-  position: absolute;
+  transition: 0.5s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: inherit;
   color: white;
-  top: 10px;
-  right: 10px;
-  z-index: 999;
+  text-align: center;
+  width: inherit;
+  height: inherit;
   cursor: pointer;
 }
 
-.stars {
+.starRating {
+  cursor: default;
+  height: 2rem;
+}
+
+.movieDetails:hover {
+  background-color: #eae2b7;
+  color: #003049;
+}
+
+.addFavorite {
+  transition: 0.3s;
   position: absolute;
+  opacity: 0;
+}
+
+.removeFavorite {
+  transition: 0.3s;
   color: white;
-  top: 10px;
-  left: 10px;
-  z-index: 999;
-  background-color: rgba(0, 0, 0, 0.274);
-  text-align: center;
-  width: 50px;
+  position: absolute;
+  opacity: 1;
+}
+
+.favorite:hover {
+  background-color: #eae2b7;
+  .addFavorite {
+    color: red;
+    opacity: 1;
+  }
+
+  .removeFavorite {
+    color: red;
+    opacity: 0;
+  }
+}
+/* ----------------------------------------------
+ * Generated by Animista on 2022-2-9 3:23:10
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation scale-up-center
+ * ----------------------------------------
+ */
+@-webkit-keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
+}
+@keyframes scale-up-center {
+  0% {
+    -webkit-transform: scale(0.5);
+    transform: scale(0.5);
+  }
+  100% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
+  }
 }
