--- a/src/styles/SignIn.module.scss
+++ b/src/styles/SignIn.module.scss
@@ -1,6 +1,43 @@
 .page__container {
-  height: 100vh;
-  width: 100vw;
-  background-color: darkseagreen;
   padding: 0 2rem;
+}
+
+.loginBox__body {
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loginBox__container {
+  height: auto;
+  padding: 2rem;
+  border-radius: 1rem;
+  flex-direction: column;
+  background-color: #003049;
+  text-align: center;
+}
+
+.loginBox__input {
+  height: 2.5rem;
+  margin: 1rem 0 1rem 0;
+  width: 100%;
+  text-align: center;
+}
+
+.loginBox__text {
+  font-weight: bolder;
+}
+
+.loginBox__line {
+  border: 2px solid #eae2b7;
+  border-radius: 20px;
+  margin: 3rem 0 3rem 0;
+}
+
+.loginBox__button {
+  height: 2.5rem;
+  margin: 1rem 0 1rem 0;
+  width: 100%;
+  text-align: center;
 }
